fix(ui): offset navigation jump and set colors for small screen

--- a/client/styles/Dataset.css
+++ b/client/styles/Dataset.css
@@ -7,6 +7,13 @@
     border-radius: 16px;
 }
 
+.dataset-container .anchor {
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
+}
+
 .dataset-container .table-responsive {
     max-height: 20em;
     overflow: auto;
