--- a/client/styles/Navigation.css
+++ b/client/styles/Navigation.css
@@ -97,7 +97,24 @@
 }
 
 .navbar-collapse.collapse > ul > li > ul > li > a:hover {
-    background-color: transparent;
+    background-color: transparent ;
     background-image: none;
     color: #EEB211;
+}
+
+@media only screen and (max-width: 768px) {
+    /*Dataset Dropdown Menu*/
+    .navbar-collapse.collapse.in > ul > li > ul {
+        background-color: rgba(47, 79, 79, .95);
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: white;
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+        background-color: transparent;
+        background-image: none;
+        color: #EEB211;
+    }
 }
